# coxswain

./: .gitignore  ORCHESTRATOR.md  README.md  TASKS.md  pyproject.toml
.claude/: launch.json
.claude/skills/gate-diagnostics/: SKILL.md
.claude/skills/gate-diagnostics/scripts/: diagnose.py
.cox/: repo.yml
.github/workflows/: ci.yml
config/: dispatch.yml.example  models.yml.example  repo.yml.example  telegram.yml.example
cox/: acceptance.py  classify.py  cli.py  context.py  dispatch.py  evidence.py  fix.py  gate.py  home.py  model.py  models.py  notify.py  plan.py  proc.py  render.py  repoconfig.py  repos.py  review.py  rules.py  server.py  ship.py  store.py  wakequeue.py  watch.py  worktree.py
cox/lanes/: __init__.py  base.py  claude.py  codex.py  stub.py
cox/scm/: base.py  github.py  local.py
cox/templates/: brief.md  dashboard.html
coxd/: SPIKE-1-BILLING.md  board.py  cli.py  dispatch.py  gate.py  lane.py  loop.py  notify.py  pyproject.toml  registry.py  repos.py  ship.py  spike_billing.py  spike_gate.py  spike_loop.py  spike_review.py  spike_worker.py  store.py  supervisor.py  worktree.py
docs/: .walkthrough.docmap.json  CLI-FACTS.md  DECISIONS.md  DESIGN-V35.md  DESIGN-VNEXT.md  DESIGN.md  RESEARCH-V35-SDK-NOTES.md  RESEARCH-loop-engineering.md  ROADMAP.md  SALVAGE.md  SHAKEDOWN.md  walkthrough.html
scripts/: demo-dashboard.sh
tests/: conftest.py  test_codex.py  test_e2e.py  test_integration.py  test_repos.py  test_server.py  test_smoke.py  test_unit.py
tests/fixtures/: claude-stream.jsonl  codex-stream.jsonl
